--- a/index.html
+++ b/index.html
@@ -1,27 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="https://fonts.googleapis.com/css?family=Alegreya:regular,500,600,700,800,900,italic,500italic,600italic,700italic,800italic,900italic" rel="stylesheet" />
-  <link rel="stylesheet" href="styles.css">
-  <title>Email For Designers</title>
-</head>
-<body>
-  <header class="header">
-    <div class="header-logo">
-      <img class="logo" src="images/logo.svg" alt="logo">
-      <span class="header-letter">Letter</span>
-    </div>
-    <nav>
-      <ul class="menu">
-        <li class="menu-item">Plugins</li>
-        <li class="menu-item">Pricing</li>
-        <li class="menu-item">Log in</li>
-        <li class="menu-item">Free Trial</li>
-      </ul>
-    </nav>
-  </header>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/src/favicon.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Alegreya:regular,500,600,700,800,900,italic,500italic,600italic,700italic,800italic,900italic"
+      rel="stylesheet"
+    />
+    <title>Email For Designers</title>
+  </head>
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/src/main.jsx"></script>
+  </body>
 </html>
