- create News component with its markup - use svgs as react components by using vite-plugin-svgr;

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       href="https://fonts.googleapis.com/css?family=Alegreya:regular,500,600,700,800,900,italic,500italic,600italic,700italic,800italic,900italic"
       rel="stylesheet"
     />
-    <title>Email For Designers</title>
+    <title>Emaily For Designers</title>
   </head>
   <body>
     <div id="root"></div>
